--- a/web.config
+++ b/web.config
@@ -1,130 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <system.web>
-<compilation debug="false" targetFramework="4.5">
-      <assemblies>
-        <remove assembly="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-  </compilation>
-    <customErrors mode="Off" />
-  </system.web>
   <system.webServer>
-    <httpProtocol>
-      <customHeaders>
-        <add name="Cache-Control" value="max-age=300, must-revalidate" />
-      </customHeaders>
-    </httpProtocol>
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="300000000">
-          <headerLimits>
-            <add header="Content-type" sizeLimit="100" />
-          </headerLimits>
-        </requestLimits>
-      </requestFiltering>
-    </security>
-    <modules>
-      <remove name="HttpContextDispose" />
-      <remove name="TeamLabAffilateModule" />
-    </modules>
-    <defaultDocument enabled="true">
-            <files>
-                <clear />
-                <add value="Default.htm" />
-                <add value="Default.asp" />
-                <add value="index.htm" />
-                <add value="index.html" />
-                <add value="iisstart.htm" />
-                <add value="default.aspx" />
-                <add value="index.php" />
-            </files>
-        </defaultDocument>
-    <httpErrors errorMode="Detailed" />
     <rewrite>
-      <rules>
-                <remove name="rewrite-blog-lang" />
-          <rule name="Main Rule" stopProcessing="true">
-              <match url=".*" />
-              <conditions logicalGrouping="MatchAll">
-                  <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                  <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-              </conditions>
- <serverVariables>
-      <set name="HTTP_X_ORIGINAL_ACCEPT_ENCODING" value="{HTTP_ACCEPT_ENCODING}" />
-      <set name="HTTP_ACCEPT_ENCODING" value="" />
-    </serverVariables>
-              <action type="Rewrite" url="index.php" />
-          </rule>
-          <rule name="wp super cache" stopProcessing="true">
-                <match url="(.*)" />
-                <conditions logicalGrouping="MatchAll">
-                    <add input="{REQUEST_METHOD}" pattern="^POST$" negate="true" />
-                    <add input="{QUERY_STRING}" pattern=".*=.*" negate="true" />
-                    <add input="{QUERY_STRING}" pattern=".*attachment_id=.*" negate="true" />
-                    <add input="{HTTP_COOKIE}" pattern="^.*(comment_author_|wordpress|wp-postpass_).*$" negate="true" />
-                    <add input="{HTTP_USER_AGENT}" pattern="^.*(2.0\ MMP|240x320|400X240|AvantGo|BlackBerry|Blazer|Cellphone|Danger|DoCoMo|Elaine/3.0|EudoraWeb|Googlebot-Mobile|hiptop|IEMobile|KYOCERA/WX310K|LG/U990|MIDP-2.|MMEF20|MOT-V|NetFront|Newt|Nintendo\ Wii|Nitro|Nokia|Opera\ Mini|Palm|PlayStation\ Portable|portalmmm|Proxinet|ProxiNet|SHARP-TQ-GX10|SHG-i900|Small|SonyEricsson|Symbian\ OS|SymbianOS|TS21i-10|UP.Browser|UP.Link|webOS|Windows\ CE|WinWAP|YahooSeeker/M1A1-R2D2|iPhone|iPod|Android|BlackBerry9530|LG-TU915\ Obigo|LGE\ VX|webOS|Nokia5800).*" negate="true" />
-                    <add input="{DOCUMENT_ROOT}/wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" matchType="IsFile" />
-                </conditions>
-            <action type="Rewrite" url="wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" />
-            </rule>
-			<rule name="wordpress" patternSyntax="Wildcard">
+      <rules><rule name="Imported Rule 1" enabled="false" stopProcessing="true"><match url="^index\.php$" ignoreCase="false" /><action type="None" /></rule><rule name="Imported Rule 2" enabled="false" stopProcessing="true"><match url="." ignoreCase="false" /><conditions logicalGrouping="MatchAll"><add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" /><add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" /></conditions><action type="Rewrite" url="/blog.onlyoffice.com/index.php" /></rule>
+			<rule name="WordPress: http://qwerty" patternSyntax="Wildcard">
 				<match url="*" />
 					<conditions>
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
 						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
 					</conditions>
 				<action type="Rewrite" url="index.php" />
-			</rule>
-        <rule name="rewrite-blog-lang" stopProcessing="true">
-            <match url="(.*)" />
-            <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                <add input="{QUERY_STRING}" pattern=".+" negate="true" />
-                <add input="{URL}" pattern="/(de|fr|es|ru|lv|it|en|cs)/blog(/.*)?(#.*)?" />
-            </conditions>
-            <serverVariables />
-            <!--<action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:2}?lang={C:1}{C:3}" appendQueryString="false" logRewrittenUrl="false" />   -->
-            <action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:1}{C:2}?{C:3}" appendQueryString="false" logRewrittenUrl="false" />
-        </rule>
-      </rules>  
-      <outboundRules rewriteBeforeCache="true">
-		<rule name="RestoreAcceptEncoding" preCondition="NeedsRestoringAcceptEncoding" >
-      <match serverVariable="HTTP_ACCEPT_ENCODING" pattern="^(.*)" />
-      <action type="Rewrite" value="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" />
-		</rule>
-        <rule name="rewrite-blog-lang-outbound-common" preCondition="ResponseIsHtml" enabled="false">
-          <match filterByTags="A" pattern="/blog/(.*)\?lang=(de|fr|es|ru|lv|it)(.*)?" />
- 	  <conditions trackAllCaptures="true">
-  	  	<add input="{HTTPS}s" pattern="on(s)|offs" />
-	  </conditions>
-          <action type="Rewrite" value="http{C:1}://{HTTP_HOST}/{R:2}/blog/{R:1}?{R:3}" />
-        </rule>
-        <rule name="rewrite-blog-lang-outbound-common-trim" preCondition="ResponseIsHtml" enabled="false" stopProcessing="true">
-          <match filterByTags="A" pattern="(.*)(?:/\?)$" />
-          <action type="Rewrite" value="{R:1}" />
-        </rule>
-        <preConditions>
-          <preCondition name="ResponseIsHtml">
-            <add input="{RESPONSE_CONTENT_TYPE}" pattern="^text/html" />
-          </preCondition>
-		<preCondition name="NeedsRestoringAcceptEncoding" >
-			<add input="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" pattern=".+" />
-      </preCondition>
-      </preConditions> 
-      </outboundRules>
+			</rule></rules>
     </rewrite>
-    <urlCompression doDynamicCompression="true" />
-        <handlers>
+    <directoryBrowse enabled="true" />
+    <defaultDocument>
+      <files>
+                <clear />
+                <add value="index.php" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.htm" />
+                <add value="index.html" />
+                <add value="iisstart.htm" />
+                <add value="default.aspx" />
+      </files>
+    </defaultDocument>
+    <handlers>
             <clear />
-			<add name="php-7.3.7_1" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\PHP\v7.3\php-cgi.exe" resourceType="Either" requireAccess="Script" />
-			<add name="php-7.3.7" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\php-7.3.7-nts-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
-			<add name="php-7.2.21" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\php-7.2.21-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
-			<add name="AjaxPoster" path="post.ashx" verb="POST,GET" type="TeamLab.HttpHandlers.PosterHandler, __Code" />
-            <add name="AdminAjaxPoster" path="adminpost.ashx" verb="POST,GET" type="TeamLab.HttpHandlers.PosterAdminHandler, __Code" />
-            <add name="GeoIPPoster" path="geoip" verb="POST,GET" type="TeamLab.HttpHandlers.GeoIPHandler, __Code" />
-            <add name="Revision" path="revision" verb="GET" type="TeamLab.HttpHandlers.RevisionHandler, __Code" />
-            <add name="BannerPoster" path="*/banner.png" verb="*" type="TeamLab.HttpHandlers.BannerHandler, __Code" />
-            <add name="less" path="*.less" verb="*" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
-            <add name="PHP53_via_FastCGI" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files (x86)\PHP\v5.4.45\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+            <add name="php-7.4.7" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\PHP\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+            <add name="php-7.4.6" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\php-7.4.6-nts-Win32-vc15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="xamlx-ISAPI-4.0_64bit" path="*.xamlx" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" />
             <add name="xamlx-ISAPI-4.0_32bit" path="*.xamlx" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" />
             <add name="xamlx-Integrated-4.0" path="*.xamlx" verb="GET,HEAD,POST,DEBUG" type="System.Xaml.Hosting.XamlHttpHandlerFactory, System.Xaml.Hosting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" preCondition="integratedMode,runtimeVersionv4.0" />
@@ -146,9 +50,14 @@
             <add name="svc-ISAPI-2.0-64" path="*.svc" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v2.0.50727\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv2.0,bitness64" />
             <add name="svc-ISAPI-2.0" path="*.svc" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v2.0.50727\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv2.0,bitness32" />
             <add name="svc-Integrated" path="*.svc" verb="*" type="System.ServiceModel.Activation.HttpHandler, System.ServiceModel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="integratedMode,runtimeVersionv2.0" />
+            <add name="WebDAV" path="*" verb="PROPFIND,PROPPATCH,MKCOL,PUT,COPY,DELETE,MOVE,LOCK,UNLOCK" modules="WebDAVModule" resourceType="Unspecified" requireAccess="None" />
+            <add name="SSINC-stm" path="*.stm" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
+            <add name="SSINC-shtm" path="*.shtm" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
+            <add name="SSINC-shtml" path="*.shtml" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
             <add name="ASPClassic" path="*.asp" verb="GET,HEAD,POST" modules="IsapiModule" scriptProcessor="%windir%\system32\inetsrv\asp.dll" resourceType="File" />
             <add name="SecurityCertificate" path="*.cer" verb="GET,HEAD,POST" modules="IsapiModule" scriptProcessor="%windir%\system32\inetsrv\asp.dll" resourceType="File" />
             <add name="ISAPI-dll" path="*.dll" verb="*" modules="IsapiModule" resourceType="File" requireAccess="Execute" allowPathInfo="true" />
+            <add name="CGI-exe" path="*.exe" verb="*" modules="CgiModule" resourceType="File" requireAccess="Execute" allowPathInfo="true" />
             <add name="AXD-ISAPI-4.0_64bit" path="*.axd" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
             <add name="PageHandlerFactory-ISAPI-4.0_64bit" path="*.aspx" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
             <add name="SimpleHandlerFactory-ISAPI-4.0_64bit" path="*.ashx" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
@@ -206,16 +115,12 @@
             <add name="WebServiceHandlerFactory-ISAPI-2.0-64" path="*.asmx" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v2.0.50727\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv2.0,bitness64" responseBufferLimit="0" />
             <add name="HttpRemotingHandlerFactory-rem-ISAPI-2.0-64" path="*.rem" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v2.0.50727\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv2.0,bitness64" responseBufferLimit="0" />
             <add name="HttpRemotingHandlerFactory-soap-ISAPI-2.0-64" path="*.soap" verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v2.0.50727\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv2.0,bitness64" responseBufferLimit="0" />
-            <add name="CGI-exe" path="*.exe" verb="*" modules="CgiModule" resourceType="File" requireAccess="Execute" allowPathInfo="true" />
-            <add name="SSINC-stm" path="*.stm" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
-            <add name="SSINC-shtm" path="*.shtm" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
-            <add name="SSINC-shtml" path="*.shtml" verb="GET,HEAD,POST" modules="ServerSideIncludeModule" resourceType="File" />
             <add name="TRACEVerbHandler" path="*" verb="TRACE" modules="ProtocolSupportModule" requireAccess="None" />
             <add name="OPTIONSVerbHandler" path="*" verb="OPTIONS" modules="ProtocolSupportModule" requireAccess="None" />
             <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
             <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" responseBufferLimit="0" />
             <add name="StaticFile" path="*" verb="*" modules="StaticFileModule,DefaultDocumentModule,DirectoryListingModule" resourceType="Either" requireAccess="Read" />
-        </handlers>
+    </handlers>
   </system.webServer>
 </configuration>
