Update web.congig and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-/web.config
-/wp-config.php
-/wp-content/uploads
-/wp-content/plugins/urvanov-syntax-highlighter/log.txt
-
+\web.config
+\wp-config.php
