--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,4 +1,4 @@
-// Variables declaration
+ // Variables declaration
 
 if ("${BRANCH_NAME}" == 'test.blog') {
 	SECRET_ID_01   = "deploymentuser_pass"
@@ -12,26 +12,28 @@ if ("${BRANCH_NAME}" == 'production.blog') {
 
 pipeline {
 
-    agent none
+	agent {label 'master'}
 
 	stages {
 	
 		stage('Build') {
 
-			agent {label 'master'}
-			
 			environment {
 				SECRET_ID_01 	= credentials("${SECRET_ID_01}")
 			}	
 						
-            steps {
-                echo 'Prepare config file'
-				bat 'powershell.exe -NoProfile -NonInteractive -ExecutionPolicy Bypass -File %WORKSPACE%/.jenkins/replace_web_config_php_script.ps1'
-
+			steps {
+				withCredentials([usernamePassword(credentialsId: 'teamlab_testblog_db_user',
+								passwordVariable: 'testdbuser',
+								usernameVariable: 'testdbpass')]) {
+                
+					echo 'Prepare config file'
+					bat 'powershell.exe -NoProfile -NonInteractive -ExecutionPolicy Bypass -File %WORKSPACE%/.jenkins/replace_web_config_php_script.ps1'
 				
-				echo 'MSDeploy to server'
-				bat '%WORKSPACE%/.jenkins/webdeploy2.bat'
+					echo 'MSDeploy to server'
+					bat '%WORKSPACE%/.jenkins/webdeploy2.bat'
+				}
 			}
-        }
-    }
+		}
+	}
 }
