--- a/web.config
+++ b/web.config
@@ -115,6 +115,7 @@
     <urlCompression doDynamicCompression="true" />
         <handlers>
             <clear />
+            <add name="php-7.3.29" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\PHP\php-7.3.29-nts-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="php-7.3.7" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\php-7.3.7-nts-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="php-7.2.21" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\Program Files\php-7.2.21-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="AjaxPoster" path="post.ashx" verb="POST,GET" type="TeamLab.HttpHandlers.PosterHandler, __Code" />
