--- a/web.config
+++ b/web.config
@@ -85,27 +85,27 @@
             <!--<action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:2}?lang={C:1}{C:3}" appendQueryString="false" logRewrittenUrl="false" />   -->
             <action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:1}{C:2}?{C:3}" appendQueryString="false" logRewrittenUrl="false" />
         </rule>
-        <rule name="blog-redirect-1" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-1" patternSyntax="Wildcard" stopProcessing="true">
           <match url="2021/07/7-best-asana-alternatives/" />
           <action type="Redirect" url="2021/07/8-best-asana-alternatives/" />
         </rule>
-        <rule name="blog-redirect-2" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-2" patternSyntax="Wildcard" stopProcessing="true">
           <match url="fr/2021/07/7-meilleures-alternatives-a-asana/" />
           <action type="Redirect" url="fr/2021/07/8-meilleures-alternatives-a-asana/" />
         </rule>
-        <rule name="blog-redirect-3" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-3" patternSyntax="Wildcard" stopProcessing="true">
           <match url="de/2021/07/7-beste-alternativen-zu-asana/" />
           <action type="Redirect" url="de/2021/07/8-beste-alternativen-zu-asana/" />
         </rule>
-        <rule name="blog-redirect-4" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-4" patternSyntax="Wildcard" stopProcessing="true">
           <match url="es/2021/07/7-mejores-alternativas-a-asana/" />
           <action type="Redirect" url="es/2021/07/8-mejores-alternativas-a-asana/" />
         </rule>
-        <rule name="blog-redirect-5" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-5" patternSyntax="Wildcard" stopProcessing="true">
           <match url="it/2021/07/le-7-migliori-alternative-a-asana/" />
           <action type="Redirect" url="it/2021/07/8-migliori-alternative-a-asana/" />
         </rule>
-        <rule name="blog-redirect-6" patternSyntax="Wildcard" stopProcessing="true">
+        <rule name="blog-subredirect-6" patternSyntax="Wildcard" stopProcessing="true">
           <match url="de/2021/10/content-erstellung-und-zusammenarbeit-in-einem-team-verbessern/" />
           <action type="Redirect" url="de/2021/10/content-erstellung/" />
         </rule>
