--- a/web.config
+++ b/web.config
@@ -112,7 +112,7 @@
         </preConditions> 
       </outboundRules>
     </rewrite>
-    <urlCompression doDynamicCompression="true" />
+    <urlCompression doDynamicCompression="false" />
         <handlers>
             <clear />
             <add name="php-7.3.29" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\PHP\php-7.3.29-nts-Win32-VC15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
