Testing rule in web.config

--- a/web.config
+++ b/web.config
@@ -67,7 +67,7 @@
                 </conditions>
             <action type="Rewrite" url="wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" />
             </rule>
-			<rule name="wordpress" patternSyntax="Wildcard">
+			<rule name="wordpress" enabled="false" patternSyntax="Wildcard">
 				<match url="*" />
 					<conditions>
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
