--- a/web.config
+++ b/web.config
@@ -67,7 +67,7 @@
                 </conditions>
             <action type="Rewrite" url="wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" />
             </rule>
-			<rule name="wordpress" enabled="false" patternSyntax="Wildcard">
+			<rule name="wordpress" enabled="true" patternSyntax="Wildcard">
 				<match url="*" />
 					<conditions>
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
@@ -91,7 +91,7 @@
       <match serverVariable="HTTP_ACCEPT_ENCODING" pattern="^(.*)" />
       <action type="Rewrite" value="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" />
     </rule>
-        <rule name="rewrite-blog-lang-outbound-common" preCondition="ResponseIsHtml" enabled="true">
+        <rule name="rewrite-blog-lang-outbound-common" preCondition="ResponseIsHtml" enabled="false">
           <match filterByTags="A" pattern="/blog/(.*)\?lang=(de|fr|es|ru|lv|it)(.*)?" />
  	  <conditions trackAllCaptures="true">
   	  	<add input="{HTTPS}s" pattern="on(s)|offs" />
