--- a/web.config
+++ b/web.config
@@ -42,56 +42,74 @@
     <httpErrors errorMode="Detailed" />
     <rewrite>
       <rules>
-                <remove name="rewrite-blog-lang" />
-          <rule name="Main Rule" stopProcessing="true">
-              <match url=".*" />
-              <conditions logicalGrouping="MatchAll">
+                <clear />
+                <rule name="wordpress" enabled="true" patternSyntax="Wildcard">
+                    <match url="*" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-              </conditions>
- <serverVariables>
+                    </conditions>
+                    <action type="Rewrite" url="index.php" />
+                </rule>
+                <rule name="blog-redirect-1" patternSyntax="Wildcard" stopProcessing="true">
+                    <match url="blog/es/2020/03/como-comparar-documentos-en-onlyoffice-5-5/" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Redirect" url="blog/es/2020/03/comparar-documentos-onlyoffice/" />
+                </rule>
+                <rule name="blog-redirect-2" patternSyntax="Wildcard" stopProcessing="true">
+                    <match url="blog/2020/03/compare-documents-in-onlyoffice-5-5/" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Redirect" url="blog/2020/03/compare-documents-onlyoffice/" />
+                </rule>
+                <rule name="blog-redirect-3" patternSyntax="Wildcard" stopProcessing="true">
+                    <match url="blog/de/2020/03/vergleichen-sie-dokumente-in-onlyoffice-5-5/" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Redirect" url="blog/de/2020/03/onlyoffice-dokumente-vergleichen/" />
+                </rule>
+                <rule name="blog-redirect-4" patternSyntax="Wildcard" stopProcessing="true">
+                    <match url="blog/de/2020/03/compare-documents-onlyoffice/" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Redirect" url="blog/de/2020/03/onlyoffice-dokumente-vergleichen/" />
+                </rule>
+                <rule name="Main Rule" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <serverVariables>
                         <set name="HTTP_X_ORIGINAL_ACCEPT_ENCODING" value="{HTTP_ACCEPT_ENCODING}" />
                         <set name="HTTP_ACCEPT_ENCODING" value="" />
-    </serverVariables>
-              <action type="Rewrite" url="index.php" />
-          </rule>
-          <rule name="wp super cache" stopProcessing="true">
-                <match url="(.*)" />
-                <conditions logicalGrouping="MatchAll">
-                    <add input="{REQUEST_METHOD}" pattern="^POST$" negate="true" />
-                    <add input="{QUERY_STRING}" pattern=".*=.*" negate="true" />
-                    <add input="{QUERY_STRING}" pattern=".*attachment_id=.*" negate="true" />
-                    <add input="{HTTP_COOKIE}" pattern="^.*(comment_author_|wordpress|wp-postpass_).*$" negate="true" />
-                    <add input="{HTTP_USER_AGENT}" pattern="^.*(2.0\ MMP|240x320|400X240|AvantGo|BlackBerry|Blazer|Cellphone|Danger|DoCoMo|Elaine/3.0|EudoraWeb|Googlebot-Mobile|hiptop|IEMobile|KYOCERA/WX310K|LG/U990|MIDP-2.|MMEF20|MOT-V|NetFront|Newt|Nintendo\ Wii|Nitro|Nokia|Opera\ Mini|Palm|PlayStation\ Portable|portalmmm|Proxinet|ProxiNet|SHARP-TQ-GX10|SHG-i900|Small|SonyEricsson|Symbian\ OS|SymbianOS|TS21i-10|UP.Browser|UP.Link|webOS|Windows\ CE|WinWAP|YahooSeeker/M1A1-R2D2|iPhone|iPod|Android|BlackBerry9530|LG-TU915\ Obigo|LGE\ VX|webOS|Nokia5800).*" negate="true" />
-                    <add input="{DOCUMENT_ROOT}/wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" matchType="IsFile" />
-                </conditions>
-            <action type="Rewrite" url="wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" />
-            </rule>
-			<rule name="wordpress" enabled="true" patternSyntax="Wildcard">
-				<match url="*" />
-					<conditions>
-						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-					</conditions>
-				<action type="Rewrite" url="index.php" />
-			</rule>
-        <rule name="rewrite-blog-lang" stopProcessing="true">
-            <match url="(.*)" />
-            <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                <add input="{QUERY_STRING}" pattern=".+" negate="true" />
-                <add input="{URL}" pattern="/(de|fr|es|ru|lv|it|en|cs)/blog(/.*)?(#.*)?" />
-            </conditions>
-            <serverVariables />
-            <!--<action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:2}?lang={C:1}{C:3}" appendQueryString="false" logRewrittenUrl="false" />   -->
-            <action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:1}{C:2}?{C:3}" appendQueryString="false" logRewrittenUrl="false" />
-        </rule>
+                    </serverVariables>
+                    <action type="Rewrite" url="index.php" />
+                </rule>
+                <rule name="wp super cache" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_METHOD}" pattern="^POST$" negate="true" />
+                        <add input="{QUERY_STRING}" pattern=".*=.*" negate="true" />
+                        <add input="{QUERY_STRING}" pattern=".*attachment_id=.*" negate="true" />
+                        <add input="{HTTP_COOKIE}" pattern="^.*(comment_author_|wordpress|wp-postpass_).*$" negate="true" />
+                        <add input="{HTTP_USER_AGENT}" pattern="^.*(2.0\ MMP|240x320|400X240|AvantGo|BlackBerry|Blazer|Cellphone|Danger|DoCoMo|Elaine/3.0|EudoraWeb|Googlebot-Mobile|hiptop|IEMobile|KYOCERA/WX310K|LG/U990|MIDP-2.|MMEF20|MOT-V|NetFront|Newt|Nintendo\ Wii|Nitro|Nokia|Opera\ Mini|Palm|PlayStation\ Portable|portalmmm|Proxinet|ProxiNet|SHARP-TQ-GX10|SHG-i900|Small|SonyEricsson|Symbian\ OS|SymbianOS|TS21i-10|UP.Browser|UP.Link|webOS|Windows\ CE|WinWAP|YahooSeeker/M1A1-R2D2|iPhone|iPod|Android|BlackBerry9530|LG-TU915\ Obigo|LGE\ VX|webOS|Nokia5800).*" negate="true" />
+                        <add input="{DOCUMENT_ROOT}/wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" matchType="IsFile" />
+                    </conditions>
+                    <action type="Rewrite" url="wp-content/cache/supercache/{HTTP_HOST}/{R:1}index.html" />
+                </rule>
+                <rule name="rewrite-blog-lang" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{QUERY_STRING}" pattern=".+" negate="true" />
+                        <add input="{URL}" pattern="/(de|fr|es|ru|lv|it|en|cs)/blog(/.*)?(#.*)?" />
+                    </conditions>
+                    <action type="Rewrite" url="http://{HTTP_HOST}/blog/{C:1}{C:2}?{C:3}" appendQueryString="false" logRewrittenUrl="false" />
+                </rule>
       </rules>  
       <outboundRules rewriteBeforeCache="true">
 <rule name="RestoreAcceptEncoding" preCondition="NeedsRestoringAcceptEncoding">
       <match serverVariable="HTTP_ACCEPT_ENCODING" pattern="^(.*)" />
       <action type="Rewrite" value="{HTTP_X_ORIGINAL_ACCEPT_ENCODING}" />
     </rule>
-        <rule name="rewrite-blog-lang-outbound-common" preCondition="ResponseIsHtml" enabled="false">
+        <rule name="rewrite-blog-lang-outbound-common" preCondition="ResponseIsHtml" enabled="true">
           <match filterByTags="A" pattern="/blog/(.*)\?lang=(de|fr|es|ru|lv|it)(.*)?" />
  	  <conditions trackAllCaptures="true">
   	  	<add input="{HTTPS}s" pattern="on(s)|offs" />
