--- a/web.config
+++ b/web.config
@@ -115,7 +115,7 @@
     <urlCompression doStaticCompression="true" doDynamicCompression="false" />
         <handlers>
             <clear />
-            <add name="php-7.4.13" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\PHP\v7.4.13\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+            <add name="php-7.4.30" path="*.php" verb="GET,HEAD,POST" modules="FastCgiModule" scriptProcessor="C:\PHP\php-7.4.30-nts-Win32-vc15-x64\php-cgi.exe" resourceType="Either" requireAccess="Script" />
             <add name="AjaxPoster" path="post.ashx" verb="POST,GET" type="TeamLab.HttpHandlers.PosterHandler, __Code" />
             <add name="AdminAjaxPoster" path="adminpost.ashx" verb="POST,GET" type="TeamLab.HttpHandlers.PosterAdminHandler, __Code" />
             <add name="GeoIPPoster" path="geoip" verb="POST,GET" type="TeamLab.HttpHandlers.GeoIPHandler, __Code" />
