--- a/web.config
+++ b/web.config
@@ -11,6 +11,8 @@
   <system.webServer>
     <httpProtocol>
       <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization" />
         <add name="Cache-Control" value="max-age=300, must-revalidate" />
       </customHeaders>
     </httpProtocol>
